# claude-coder

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SYSTEMD_SETUP.md  pyproject.toml
docs/: README.md  SDK_DUPLICATION_REVIEW.md  configuration.md  development.md  project-overview.md  setup.md  tools.md
docs/plans/: 2026-02-25-directory-nav-session-resume-dynamic-commands-design.md  2026-02-25-directory-nav-session-resume-dynamic-commands-plan.md  2026-02-25-thin-client-sessions-design.md  2026-02-25-thin-client-sessions-impl.md  2026-02-26-claude-layer-rewrite-design.md  2026-02-26-claude-layer-rewrite-plan.md  2026-02-26-remove-rate-limit-cost-tracking-design.md  2026-02-26-remove-rate-limit-cost-tracking-plan.md  2026-02-27-repo-directory-browser-design.md  2026-02-27-repo-directory-browser-plan.md  2026-02-27-resume-bot-command-design.md  2026-02-27-resume-bot-command-plan.md  2026-02-27-user-client-actor-design.md  2026-02-27-user-client-actor-plan.md  2026-02-28-command-ux-redesign-design.md  2026-02-28-multimodal-attachments-design.md  2026-02-28-multimodal-attachments-plan.md  2026-02-28-native-skill-passthrough-design.md  2026-02-28-native-skill-passthrough-plan.md  2026-02-28-rich-progress-display-design.md  2026-02-28-rich-progress-display-plan.md  2026-03-01-multi-project-concurrent-sessions-design.md  2026-03-01-multi-project-concurrent-sessions-plan.md  2026-03-01-start-wizard-ux-design.md  2026-03-01-start-wizard-ux-plan.md  2026-03-01-topic-lifecycle-ux-design.md  2026-03-01-topic-lifecycle-ux-plan.md  2026-03-01-true-concurrent-sessions-design.md  2026-03-01-true-concurrent-sessions-plan.md  2026-03-02-remove-classic-mode-design.md  2026-03-02-remove-classic-mode-plan.md
scripts/: claude-coder.service
src/: main.py
src/api/: server.py
src/bot/: attachments.py  core.py  orchestrator.py  progress.py
src/claude/: __init__.py  client_manager.py  facade.py  history.py  monitor.py  options.py  sdk_integration.py  session.py  stream_handler.py  transcript.py  user_client.py
src/config/: environments.py  loader.py  settings.py
src/events/: handlers.py
src/projects/: __init__.py  lifecycle.py  thread_manager.py  topic_namer.py
src/security/: __init__.py  audit.py  rate_limiter.py  validators.py
src/skills/: __init__.py  loader.py
src/storage/: __init__.py  database.py  facade.py  models.py  repositories.py
src/utils/: constants.py
(+61 files in other folders)
