[project]
name = "claude-code-telegram"
version = "1.3.0"
description = "Telegram bot for remote Claude Code access with comprehensive configuration management"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Richard Atkinson", email = "richardatk01@gmail.com"},
]
keywords = ["telegram", "bot", "claude", "ai", "development", "remote", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[rate-limiter]>=22.6,<23",
    "structlog>=25.4.0,<26",
    "pydantic>=2.11.5,<3",
    "pydantic-settings>=2.9.1,<3",
    "python-dotenv>=1.0.0,<2",
    "aiofiles>=24.1.0,<25",
    "aiosqlite>=0.21.0,<1",
    "anthropic>=0.40.0,<1",
    "claude-agent-sdk>=0.1.39,<1",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "apscheduler>=3.10,<4",
    "PyYAML>=6.0.2,<7",
    "pysqlite3-binary>=0.5.4.post2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.1,<4",
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "flake8>=7.2.0,<8",
    "mypy>=1.16.0,<2",
    "autoflake>=2.3.2,<3",
]

[project.urls]
Homepage = "https://github.com/richardatkinson/claude-code-telegram"
Repository = "https://github.com/richardatkinson/claude-code-telegram"
Documentation = "https://github.com/richardatkinson/claude-code-telegram/blob/main/docs/"

[project.scripts]
claude-telegram-bot = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
